# dxbc-spirv

./: README.md  meson.build  meson_options.txt
dxbc/: dxbc_api.cpp  dxbc_api.h  dxbc_container.cpp  dxbc_container.h  dxbc_converter.cpp  dxbc_converter.h  dxbc_disasm.cpp  dxbc_disasm.h  dxbc_interface.h  dxbc_io_map.cpp  dxbc_io_map.h  dxbc_parser.cpp  dxbc_parser.h  dxbc_registers.cpp  dxbc_registers.h  dxbc_resources.cpp  dxbc_resources.h  dxbc_signature.cpp  dxbc_signature.h  dxbc_types.cpp  dxbc_types.h
ir/: ir.cpp  ir.h  ir.md  ir_builder.cpp  ir_builder.h  ir_container.h  ir_disasm.cpp  ir_disasm.h  ir_divergence.cpp  ir_divergence.h  ir_dominance.cpp  ir_dominance.h  ir_legalize.cpp  ir_legalize.h  ir_range.cpp  ir_range.h  ir_serialize.cpp  ir_serialize.h  ir_utils.cpp  ir_utils.h  ir_validation.cpp  ir_validation.h
ir/passes/: ir_pass_arithmetic.cpp  ir_pass_arithmetic.h  ir_pass_buffer_kind.cpp  ir_pass_buffer_kind.h  ir_pass_cfg_cleanup.cpp  ir_pass_cfg_cleanup.h  ir_pass_cfg_convert.h  (+31 more)
sm3/: sm3_control_flow.h  sm3_converter.cpp  sm3_converter.h  sm3_disasm.cpp  sm3_disasm.h  sm3_io_map.cpp  sm3_io_map.h  sm3_parser.cpp  sm3_parser.h  sm3_registers.cpp  sm3_registers.h  sm3_resources.cpp  sm3_resources.h  sm3_spec_constants.cpp  sm3_spec_constants.h  sm3_types.cpp  sm3_types.h
spirv/: spirv_builder.cpp  spirv_builder.h  spirv_mapping.h  spirv_types.h
tests/: meson.build  test_main.cpp  test_spirv.cpp
tests/api/: meson.build  test_api.cpp  test_api.h  test_api_arithmetic.cpp  test_api_arithmetic.h  test_api_dump.cpp  test_api_io.cpp  test_api_io.h  test_api_misc.cpp  test_api_misc.h  test_api_pass_arithmetic.cpp  test_api_pass_arithmetic.h  test_api_pass_lower_io.cpp  test_api_pass_lower_io.h  test_api_pass_scalarize.cpp  test_api_resources.cpp  test_api_resources.h  test_api_spirv.cpp  test_api_spirv.h
tests/dxbc/: test_dxbc.h  test_dxbc_common.cpp
tests/ir/: test_ir.h  test_ir_builder.cpp  test_ir_input_map.cpp  test_ir_serialize.cpp  test_ir_type_propagation.cpp
tests/util/: test_util.h
tools/: dxbc_compiler.cpp  dxbc_disasm.cpp  meson.build
util/: util_bit.h  util_byte_stream.h  util_debug.h  util_flags.h  util_float16.cpp  util_float16.h  util_log.cpp  util_md5.cpp  util_small_vector.h  util_vle.h
